[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.dagster]
# We can define ONE SINGLE TOP-LEVEL code location
# here in this pyproject.toml.
# If you want to be able to define multiple
# top-level code locations, comment out this
# section and define them in a workspace.yaml
# More info here:
# https://docs.dagster.io/guides/build/projects/dagster-project-file-reference
module_name = "OpenStudioLandscapes.Dagster.definitions"
code_location_name = "OpenStudioLandscapes-Dagster"
